# end-to-end-ai-engineering-bootcamp

./: .gitignore  Makefile  README.md  docker-compose.yml  env.example  pyproject.toml
.github/workflows/: ci.yaml
apps/a2a/warehouse_manager_agent/: Dockerfile  agent.py  app.py  config.py  executor.py  pyproject.toml  tools.py  utils.py
apps/api/: pyproject.toml
apps/mcp/reviews/: Dockerfile  pyproject.toml
apps/mcp/reviews/src/reviews/: __init__.py  main.py  utils.py
documentation/development-environment/: README.md
notebooks/prerequisites/: 01-llm-apis.ipynb
notebooks/week1/: 01-explore-amazon-dataset.ipynb  02-RAG-preprocessing-amazon-dataset.ipynb  03-RAG-pipeline.ipynb  04-RAG-evaluation-synthetic-dataset.ipynb  05-RAG-evals.ipynb
notebooks/week2/: 01-structured-outputs.ipynb  02-RAG-structured-outputs.ipynb  03-hybrid-search.ipynb  04-reranking.ipynb  05-prompt-management.ipynb
notebooks/week3/: 01-intro-langgraph.ipynb  02-query-rewriting.ipynb  03-router.ipynb  04-agent-single-turn.ipynb
notebooks/week4/: 01-multi-turn-agent.ipynb  02-multiple-tools.ipynb  03-human-feedback.ipynb  04-mcp.ipynb  05-streaming-state.ipynb
notebooks/week5/: 01-shopping-cart-agent-tools.ipynb  02-shopping-cart-agent.ipynb  03-coordinator-agent.ipynb  04-warehouse-synthetic-dataset.ipynb  05-warehouse-agent-tools.ipynb  06-warehouse-manager-agent.ipynb
notebooks/week6/: 01-litellm-router.ipynb  02-warehouse-agent-adk.ipynb  03-warehouse-agent-a2a.ipynb  04-warehouse-a2a-agent-langgraph-integration.ipynb  05-prompt-caching.ipynb  06-prompt-caching-agent.ipynb
(+66 files in other folders)
