[project]
name = "warehouse-manager-agent"
version = "0.1.0"
description = "A2A Warehouse Manager Agent"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk>=0.3.24",
    "google-adk>=1.25.0",
    "litellm>=1.81.15",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.30.0",
]

[tool.uv]
package = false
