[project]
name = "reviews"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "nastassja90", email = "nas.bellisario@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.14.5",
    "openai>=2.15.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "qdrant-client>=1.16.2",
]

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"
